
# Required initializer
AC_INIT(mod_webmuzzle, 0.1, mail@andr.mobi, mod_webmuzzle)

AM_INIT_AUTOMAKE

# Add a test for a compiler.
AC_PROG_CXX
AC_PROG_LIBTOOL

# Define a macro that is used to parse a --with-apache parameter
# The macro is named "APACHE_DIR"
AC_DEFUN([APACHE_DIR],[
	AC_ARG_WITH(
		apache,
		[  --with-apache[=DIR]     Apache server parent directory],
		,
		[with_apache="no"]
	)

	AC_MSG_CHECKING(for Apache)

	if test "$with_apache" = "no"; then
		AC_MSG_ERROR( You need to specify the apache parent directory using --with-apache)
	else
		# make sure that a well known include file exists
		if test -e $with_apache/include/apache22/httpd.h; then
			apache_dir=$with_apache
			AC_MSG_RESULT(found)
		else
			AC_MSG_ERROR( $with_apache not found. Check the value you specified with --with-apache)
		fi
	fi

])

# Now call the APACHE_DIR macro that was just specified
APACHE_DIR

# The AC_SUBST macro causes the variable to be saved in config.status
AC_SUBST(apache_dir)

# Write config.status and the Makefile
AC_OUTPUT(Makefile)
